New tables for schema and its entity framework entities.
